link css & js to html file

--- a/text.html
+++ b/text.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/style.css" />
     <title>Naledi Leotlela's World Clock</title>
 </head>
 <body>
+    <h1>
+        Hello
+    </h1>
     <footer> This Project was coded by Naledi Leotlela and is open sourced on
         <a href="#" target="_blank"> Github</a>
     </footer>
+    <script src="src/action.js"></script>
 </body>
 </html>
