--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Hello
     </h1>
     <footer> This Project was coded by Naledi Leotlela and is open sourced on
-        <a href="#" target="_blank"> Github</a>
+        <a href="https://github.com/MissLeo8/naledi-world-clock" target="_blank"> Github</a>
     </footer>
     <script src="src/action.js"></script>
 </body>
