--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>
-        Hello
+        World Clock
     </h1>
     <footer> This Project was coded by Naledi Leotlela and is open sourced on
         <a href="https://github.com/MissLeo8/naledi-world-clock" target="_blank"> Github</a>
