--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>
         World Clock
     </h1>
-    <footer> This Project was coded by Naledi Leotlela and is open sourced on
+    <footer> This project was coded by Naledi Leotlela and is open sourced on
         <a href="https://github.com/MissLeo8/naledi-world-clock" target="_blank"> Github</a>
     </footer>
     <script src="src/action.js"></script>
