added basic html

--- a/index.html
+++ b/index.html
@@ -1,18 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
     <title>Naledi Leotlela's World Clock</title>
 </head>
+
 <body>
-    <h1>
-        World Clock
-    </h1>
+    <div class="container">
+        <h1>
+            World Clock
+        </h1>
+        <select>
+            <option value="">Choose your city...</option>
+            <option value="">Milan</option>
+            <option value="">Johanessburg</option>
+            <option value="">Singapore</option>
+            <option value="">Chicago</option>
+        </select>
+        <div class="city">
+            <h2>Milan</h2>
+            <div class="date">February 2nd 2025</div>
+            <div class="time"> 18:29:45</div>
+        </div>
+        <div class="city">
+            <h2>Johannesburg</h2>
+            <div class="date">February 2nd 2025</div>
+            <div class="time"> 18:29:45</div>
+        </div>
+    </div>
     <footer> This project was coded by Naledi Leotlela and is open sourced on
         <a href="https://github.com/MissLeo8/naledi-world-clock" target="_blank"> Github</a>
     </footer>
     <script src="src/action.js"></script>
 </body>
+
 </html>
