styled with basic css, adjusted content in html

--- a/index.html
+++ b/index.html
@@ -21,14 +21,26 @@
             <option value="">Chicago</option>
         </select>
         <div class="city">
+            <div>
             <h2>Milan</h2>
             <div class="date">February 2nd 2025</div>
-            <div class="time"> 18:29:45</div>
+            </div>
+            <div>
+            <div class="time"> 18:29:45
+                <small>PM</small>
+            </div>
+            </div>
         </div>
         <div class="city">
+            <div>
             <h2>Johannesburg</h2>
             <div class="date">February 2nd 2025</div>
-            <div class="time"> 18:29:45</div>
+            </div>
+            <div>
+            <div class="time"> 18:29:45
+            <small>PM</small>
+            </div>
+            </div>
         </div>
     </div>
     <footer> This project was coded by Naledi Leotlela and is open sourced on
