added js functionality, removed fake data & added moment to html
js function updates for milan location only at this time.
Fake data removed from html and added moments

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/style.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.46/moment-timezone-with-data-1970-2030.min.js"></script>
     <title>Naledi Leotlela's World Clock</title>
 </head>
 
@@ -20,18 +22,16 @@
             <option value="">Singapore</option>
             <option value="">Chicago</option>
         </select>
-        <div class="city">
+        <div class="city" id="milan">
             <div>
             <h2>Milan</h2>
-            <div class="date">February 2nd 2025</div>
+            <div class="date"></div>
             </div>
             <div>
-            <div class="time"> 18:29:45
-                <small>PM</small>
-            </div>
+            <div class="time"></div>
             </div>
         </div>
-        <div class="city">
+        <div class="city" id="johannesburg">
             <div>
             <h2>Johannesburg</h2>
             <div class="date">February 2nd 2025</div>
