removed fake data & added js functionality for johannesburg id

--- a/index.html
+++ b/index.html
@@ -34,12 +34,10 @@
         <div class="city" id="johannesburg">
             <div>
             <h2>Johannesburg</h2>
-            <div class="date">February 2nd 2025</div>
+            <div class="date"></div>
             </div>
             <div>
-            <div class="time"> 18:29:45
-            <small>PM</small>
-            </div>
+            <div class="time"></div>
             </div>
         </div>
     </div>
