--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
         <h1>
             World Clock
         </h1>
-        <select>
+        <select id="city">
             <option value="">Choose your city...</option>
-            <option value="">Milan</option>
-            <option value="">Johanessburg</option>
-            <option value="">Singapore</option>
-            <option value="">Chicago</option>
+            <option value="Africa/Lusaka">Lusaka</option>
+            <option value="Europe/Madrid">Madrid</option>
+            <option value="Asia/Singapore">Singapore</option>
+            <option value="America/Chicago">Chicago</option>
         </select>
+
+        <div id="cities">
         <div class="city" id="milan">
             <div>
             <h2>Milan</h2>
@@ -40,6 +42,7 @@
             <div class="time"></div>
             </div>
         </div>
+    </div>
     </div>
     <footer> This project was coded by Naledi Leotlela and is open sourced on
         <a href="https://github.com/MissLeo8/naledi-world-clock" target="_blank"> Github</a>
