added current location in html & js

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </h1>
         <select id="city">
             <option value="">Choose your city...</option>
+            <option value="current">Your Current Location</option>
             <option value="Africa/Lusaka">Lusaka</option>
             <option value="Europe/Madrid">Madrid</option>
             <option value="Asia/Singapore">Singapore</option>
