added havana as additional city in html & included js functionality

--- a/index.html
+++ b/index.html
@@ -43,6 +43,15 @@
             <div class="time"></div>
             </div>
         </div>
+        <div class="city" id="havana">
+            <div>
+                <h2>Havana</h2>
+                <div class="date"></div>
+            </div>
+            <div>
+                <div class="time"></div>
+            </div>
+        </div>
     </div>
     </div>
     <footer> This project was coded by Naledi Leotlela and is open sourced on
